Designed the architecture of backend application

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -32,4 +32,7 @@ lerna-debug.log*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json
+!.vscode/extensions.
+
+# ENV 
+.env 
