--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,23 +1,14 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "arrowParens": "avoid",
   "printWidth": 120,
-
-  "overrides": [
-    {
-      "files": "*.js",
-      "options": {
-        "parser": "babel",
-        "trailingComma": "es5"
-      }
-    }
-  ],
   "proseWrap": "always",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "useTabs": false,
   "tabWidth": 2,
   "semi": true,
-  "importSpacing": true
+  "importSpacing": true,
+  "object-curly-newline": "true"
 }
