--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "angular-paginator": "^10.0.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.6.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
